--- a/handlebars/layout.hbs
+++ b/handlebars/layout.hbs
@@ -7,7 +7,7 @@
 
   <style>
     body {
-      font-family: Arial, Helvetica, sans-serif;
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
 
     .items {
@@ -69,34 +69,7 @@
 </head>
 
 <body>
-  <div class="items">
-    {{#each items}}
-    <div class="item">
-      <a href="{{this.Link}}">
-        <div class="image">
-          <img src="{{this.Image}}" />
-        </div>
-      </a>
-
-      <div class="item-body">
-        <a href="{{this.Link}}">
-          <div>{{this.Title}}</div>
-        </a>
-
-        <div class="info">
-          <div>{{this.Ago}}</div>
-
-          {{#if this.Comments}}
-          <div class="comments">
-            |
-            <a href="{{this.Comments}}">comments</a>
-          </div>
-          {{/if}}
-        </div>
-      </div>
-    </div>
-    {{/each}}
-  </div>
+  {{> content}}
 </body>
 
 
